--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,11 +38,13 @@
     "url": "https://github.com/uq-its-ss/user-interface-development-framework/issues"
   },
   "dependencies": {
+    "@uq-uidf/core": "^0.0.0",
     "compass-mixins": "^0.12.10",
     "font-awesome": "^4.7.0",
     "foundation-sites": "^5.5.3"
   },
   "peerDependency": {
+    "@uq-uidf/core": "^0.0.0",
     "font-awesome": "^4.7.0"
   }
 }
