--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -40,11 +40,13 @@
     "dependencies": {
         "@uqmchu/core": "^0.0.0",
         "@uqmchu/foundation-global": "^0.0.0",
+        "@uqmchu/foundation-grid": "^0.0.0",
         "@uqmchu/foundation-misc": "^0.0.0"
     },
     "peerDependencies": {
         "@uqmchu/core": "^0.0.0",
         "@uqmchu/foundation-global": "^0.0.0",
+        "@uqmchu/foundation-grid": "^0.0.0",
         "@uqmchu/foundation-misc": "^0.0.0"
     }
 }
