--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -63,6 +63,7 @@
     "@uq-uidf/icon": "^0.0.0",
     "@uq-uidf/lists": "^0.0.0",
     "@uq-uidf/main-menu": "^0.0.0",
+    "@uq-uidf/main-navigation": "^0.0.0",
     "@uq-uidf/pane": "^0.0.0",
     "@uq-uidf/sections": "^0.0.0",
     "@uq-uidf/tabs": "^0.0.0",
