--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "0.0.5-alpha.0",
+  "version": "0.0.6-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -36,10 +36,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.5-alpha.0",
-    "@uqds/grid": "^0.0.5-alpha.0",
-    "@uqds/icon": "^0.0.5-alpha.0",
-    "@uqds/form": "^0.0.5-alpha.0"
+    "@uqds/core": "^0.0.6-alpha.0",
+    "@uqds/form": "^0.0.6-alpha.0",
+    "@uqds/grid": "^0.0.6-alpha.0",
+    "@uqds/icon": "^0.0.6-alpha.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
