--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/alert",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Alert component",
   "keywords": [
     "uqds",
@@ -26,7 +26,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "repository": {
     "type": "git",
@@ -40,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0",
-    "@uqds/grid": "^0.0.6-alpha.0",
-    "@uqds/icon": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0",
+    "@uqds/grid": "^0.0.7-alpha.0",
+    "@uqds/icon": "^0.0.7-alpha.0"
   }
 }
