--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/blockquote",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Blockquote component",
   "keywords": [
     "uqds",
@@ -29,7 +29,8 @@
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "repository": {
     "type": "git",
@@ -39,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0"
   }
 }
