--- a/packages/body/package.json
+++ b/packages/body/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/body",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Basic styles for HTML elements",
   "keywords": [
     "uqds",
@@ -26,7 +26,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
@@ -39,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0"
   }
 }
