--- a/packages/grid-menu/package.json
+++ b/packages/grid-menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid-menu",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Grid menu components",
   "keywords": [
     "uqds",
@@ -27,7 +27,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
@@ -40,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0",
-    "@uqds/icon": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0",
+    "@uqds/icon": "^0.0.7-alpha.0"
   }
 }
