--- a/packages/header-legacy/package.json
+++ b/packages/header-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header-legacy",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Header component",
   "private": true,
   "keywords": [
@@ -24,7 +24,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "repository": {
     "type": "git",
@@ -34,8 +35,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0",
-    "@uqds/grid": "^0.0.6-alpha.0",
-    "@uqds/icon": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0",
+    "@uqds/grid": "^0.0.7-alpha.0",
+    "@uqds/icon": "^0.0.7-alpha.0"
   }
 }
