--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -23,7 +23,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
@@ -36,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0",
-    "@uqds/form": "^0.0.6-alpha.0",
-    "@uqds/grid": "^0.0.6-alpha.0",
-    "@uqds/icon": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0",
+    "@uqds/form": "^0.0.7-alpha.0",
+    "@uqds/grid": "^0.0.7-alpha.0",
+    "@uqds/icon": "^0.0.7-alpha.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
