--- a/packages/progression/package.json
+++ b/packages/progression/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/progression",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Progression component",
   "keywords": [
     "uqds",
@@ -27,7 +27,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
@@ -40,6 +41,6 @@
     "url": "https://github.com/uqds/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0"
   }
 }
