--- a/packages/site-header/package.json
+++ b/packages/site-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/site-header",
-  "version": "0.0.6-alpha.0",
+  "version": "0.0.7-alpha.0",
   "description": "Site header (title, utility area, and navigation)",
   "keywords": [
     "uqds",
@@ -26,7 +26,8 @@
     "lib": "src"
   },
   "files": [
-    "src/*", "dist/*"
+    "src/*",
+    "dist/*"
   ],
   "scripts": {
     "prepare": "gulp -f ../../gulpfile.js --cwd=. prepare"
@@ -39,9 +40,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^0.0.6-alpha.0",
-    "@uqds/grid": "^0.0.6-alpha.0",
-    "@uqds/icon": "^0.0.6-alpha.0"
+    "@uqds/core": "^0.0.7-alpha.0",
+    "@uqds/grid": "^0.0.7-alpha.0",
+    "@uqds/icon": "^0.0.7-alpha.0"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
