--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -43,6 +43,7 @@
     "@uqds/icon": "^0.0.7-alpha.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
     "gulp": "^4.0.2"
   },
   "type": "module"
