--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/user-event": "^14.1.1",
     "babel-jest": "^28.0.3",
     "core-js": "^3.22.4",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest-dom": "^4.0.1",
@@ -52,6 +53,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "^4.2.0",
+    "typescript": "^4.6.4",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
