--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -44,5 +44,8 @@
     "@uqds/core": "^0.0.7-alpha.0",
     "@uqds/grid": "^0.0.7-alpha.0",
     "@uqds/icon": "^0.0.7-alpha.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
