--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -60,6 +60,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "glob": "^7.2.0",
+    "gulp": "^4.0.2",
     "mini-svg-data-uri": "^1.4.3",
     "prettier": "^2.5.1",
     "svgdom": "^0.1.10",
