--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "prettier": "2.7.1",
     "rollup": "^2.70.2",
     "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx}\"",
-    "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx}\" && npm run lint-js",
+    "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx}\" && npm run lint-js && npm run lint-css",
     "lint-js": "eslint --ext .js,.jsx .",
-    "lint-fix": "npm run format && npm run lint-js -- --fix",
+    "lint-css": "stylelint \"**/*.{css,scss}\"",
+    "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
     "test": "jest"
   },
   "browserslist": [
