--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -62,6 +62,7 @@
 		"mermaid": "^8.13.10",
 		"sass": "^1.49.7",
 		"sass-loader": "^8.0.2",
+		"storybook-addon-designs": "^6.3.1",
 		"tocbot": "^4.18.0",
 		"ts-loader": "^6.2.2",
 		"typescript": "^3.8.2",
