--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -18,6 +18,11 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.0",
 		"@material/circular-progress": "^8.0.0",
+		"@storybook/addon-a11y": "^6.5.10",
+		"@storybook/addon-essentials": "^6.5.10",
+		"@storybook/addons": "^6.5.10",
+		"@storybook/html": "^6.5.10",
+		"@storybook/theming": "^6.5.10",
 		"@storybook/addon-a11y": "^6.5.5",
 		"@storybook/addon-essentials": "^6.5.5",
 		"@storybook/addons": "^6.5.5",
