--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -35,4 +35,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        npm run reg-suit run --test
+        npx run reg-suit run --test
