--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^14.3.0",
     "babel-jest": "^28.1.3",
-    "core-js": "^3.24.0",
     "cli-progress": "^3.11.2",
+    "core-js": "^3.24.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -33,6 +33,7 @@
     "lerna": "^5.5.0",
     "msw": "^0.44.2",
     "prettier": "2.7.1",
+    "puppeteer": "^17.1.3",
     "reg-keygen-git-hash-plugin": "^0.12.1",
     "reg-notify-github-with-api-plugin": "^0.12.1",
     "reg-publish-s3-plugin": "^0.12.1",
