--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -30,9 +30,9 @@ jobs:
     - name: create the current snapshot
       run: |
         npm test
-    - name: run reg
+    - name: run visual regression
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        npx run reg-suit run --test
+        npx run reg-suit
