--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -29,10 +29,10 @@ jobs:
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
     - name: create the current snapshot
       run: |
-        npm test
+        npm update-screenshots
     - name: run visual regression
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        npx reg-suit run
+        npm run reg-suit run --
