--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -29,7 +29,7 @@ jobs:
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
     - name: create the current snapshot
       run: |
-        npm update-screenshots
+        npm run update-screenshots
     - name: run visual regression
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
