--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -25,7 +25,7 @@ jobs:
       env:
         CI: true
       - name: Build Storybook
-        run: npx build-storybook --quiet
+        run: npm run build-storybook --quiet
     - name: workaround for detached HEAD
       run: |
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
