--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -27,6 +27,9 @@ jobs:
     - name: workaround for detached HEAD
       run: |
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
+    - name: Build Storybook
+      run: |
+        npm run build-storybook --quiet
     - name: create the current snapshot
       run: |
         npm run update-screenshots
