--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Build Storybook
       run: |
         npm run build-storybook --quiet
+      working-directory: packages/storybook-html
     - name: create the current snapshot
       run: |
         npm run update-screenshots
