--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -29,7 +29,7 @@ jobs:
         git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
     - name: Build Storybook
       run: |
-        npm run build-storybook --quiet
+        npm run storybook --quiet
       working-directory: packages/storybook-html
     - name: create the current snapshot
       run: |
