--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install Playwright
       run: npx playwright install --with-deps
     - name: Build Storybook
-      run: yarn build-storybook --quiet
+      run: npx build-storybook --quiet
     - name: Serve Storybook and run tests
       run: |
         npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
