--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -31,7 +31,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Build Storybook
       run: |
-        npm build-storybook --quiet
+        npm run build-storybook --quiet
       working-directory: packages/storybook-html/
     - name: Serve Storybook and run tests
       run: |
