--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -31,7 +31,7 @@
 		"@uqds/button": "^0.0.8-alpha.0",
 		"@uqds/card": "^0.0.8-alpha.0",
 		"@uqds/core": "^0.0.8-alpha.0",
-		"@uqds/footer": "^0.0.10-alpha.0",,
+		"@uqds/footer": "^0.0.10-alpha.0",
 		"@uqds/form": "^0.0.8-alpha.0",
 		"@uqds/grid": "^0.0.8-alpha.0",
 		"@uqds/grid-menu": "^0.0.8-alpha.0",
