--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -25,6 +25,7 @@
 		"@storybook/theming": "^6.5.10",
 		"@uqds/accordion": "^0.0.8-alpha.0",
 		"@uqds/alert": "^0.0.11-alpha.0",
+		"@uqds/app-maps": "^0.0.10-alpha.0",
 		"@uqds/blockquote": "^0.0.8-alpha.0",
 		"@uqds/body": "^0.0.10-alpha.0",
 		"@uqds/breadcrumb": "^0.0.8-alpha.0",
@@ -32,10 +33,12 @@
 		"@uqds/card": "^0.0.8-alpha.0",
 		"@uqds/core": "^0.0.8-alpha.0",
 		"@uqds/footer": "^0.0.10-alpha.0",
+		"@uqds/footer-legacy": "^0.0.8-alpha.0",
 		"@uqds/form": "^0.0.8-alpha.0",
 		"@uqds/grid": "^0.0.8-alpha.0",
 		"@uqds/grid-menu": "^0.0.8-alpha.0",
 		"@uqds/header": "^0.0.10-alpha.0",
+		"@uqds/header-legacy": "^0.0.8-alpha.0",
 		"@uqds/hero": "^0.0.8-alpha.0",
 		"@uqds/icon": "^0.0.8-alpha.0",
 		"@uqds/lists": "^0.0.8-alpha.0",
