--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -31,6 +31,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Build Storybook
       run: |
+        npx lerna clean
         npx lerna bootstrap
         npm run build-storybook --quiet
       working-directory: packages/storybook-html/
