--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -35,7 +35,8 @@
     ".": {
       "import": "./dist/mjs/index.js",
       "require": "./dist/js/uqds.js"
-    }
+    },
+    "./src/*": "./src/*.js"
   },
   "style": "dist/css/main.css",
   "scripts": {
