--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -12,20 +12,23 @@
   },
   "license": "ISC",
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@material/circular-progress": "^8.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@storybook/addon-a11y": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/html": "^6.5.15",
-    "@storybook/mdx2-csf": "^0.0.3",
+    "@storybook/addon-a11y": "^7.6.12",
+    "@storybook/addon-essentials": "^7.6.12",
+    "@storybook/addon-mdx-gfm": "^7.6.12",
+    "@storybook/addons": "^7.6.12",
+    "@storybook/html": "^7.6.12",
+    "@storybook/html-webpack5": "^7.6.12",
     "@storybook/test-runner": "^0.9.2",
-    "@storybook/theming": "^6.5.15",
+    "@storybook/theming": "^7.6.12",
     "@uqds/accordion": "^1.0.1-alpha.2",
     "@uqds/alert": "^1.1.2-alpha.0",
     "@uqds/app-maps": "^0.0.15-alpha.1",
@@ -64,12 +67,16 @@
     "mermaid": "^8.13.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.7",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "storybook": "^7.6.12",
     "tocbot": "^4.18.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.2",
     "underscore": "^1.13.2",
     "zxcvbn": "^4.4.2"
+  },
+  "dependencies": {
+    "@storybook/addon-styling-webpack": "^0.0.6"
   }
 }
