--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: !startsWith(github.event.head_commit.message, 'chore(release): publish')
     steps:
       - name: "⬇️ Checkout"
         uses: actions/checkout@v3
