--- a/lerna.json
+++ b/lerna.json
@@ -13,7 +13,7 @@
     "version": {
       "conventionalCommits": true,
       "allowBranch": ["master", "releases"],
-      "message": "chore(release): publish [skip ci]"
+      "message": "chore(release): publish"
     }
   }
 }
