--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -1,4 +1,4 @@
-name: Visual Regression Testing
+name: Visual Regression Testing and preview environment
 
 on: [push]
 
@@ -47,3 +47,22 @@ jobs:
           UQDS_PERSONAL_ACCESS_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
         run: |
           npm run reg-suit run --update-screenshots
+
+      - name: Sync to preview environment
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks
+        env:
+          AWS_S3_BUCKET: uq-ds-regsuit
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SOURCE_DIR: 'packages/storybook-html/storybook-static'
+          DEST_DIR: storybook-preview/${{ github.run_id }}
+
+      - name: Add link to storybook preview in comments
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: preview
+          message: |
+            Storybook preview https://uq-ds-regsuit.s3.amazonaws.com/storybook-preview/${{ github.run_id }}/index.html
+
