--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.branch}}
 
       - name: Use Node 18
         uses: actions/setup-node@v3
@@ -25,11 +26,6 @@ jobs:
         run: |
           npm ci
           npx lerna bootstrap --no-ci
-
-      - name: Workaround for detached HEAD
-        # Workaround for Detached HEAD https://github.com/reg-viz/reg-suit#workaround-for-detached-head
-        run: |
-          git checkout "${GITHUB_REF:11}"
 
       - name: Build Storybook
         run: |
