--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.branch}}
+          ref: ${{ github.event.pull_request.head.ref}}
 
       - name: Git info
         run: |
           git branch
           git status
-          echo "event info branch ${{ github.event.pull_request.branch}}"
+          echo "event info branch ${{ github.event.pull_request.head.ref}}
 
       - name: Use Node 18
         uses: actions/setup-node@v3
