--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.ref}}
+          ref: ${{ github.event.pull_request.head.ref || github.ref}}
 
       - name: Use Node 18
         uses: actions/setup-node@v3
