--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -23,9 +23,10 @@
     "@material/circular-progress": "^8.0.0",
     "@storybook/addon-a11y": "^7.6.13",
     "@storybook/addon-essentials": "^7.6.13",
+    "@storybook/addon-interactions": "^7.6.13",
+    "@storybook/addon-links": "^7.6.13",
     "@storybook/addon-mdx-gfm": "^7.6.13",
     "@storybook/addon-styling-webpack": "^0.0.6",
-    "@storybook/addons": "^7.6.13",
     "@storybook/blocks": "^7.6.13",
     "@storybook/html": "^7.6.13",
     "@storybook/html-webpack5": "^7.6.13",
