--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -30,6 +30,7 @@
     "@storybook/blocks": "^7.6.13",
     "@storybook/html": "^7.6.13",
     "@storybook/html-webpack5": "^7.6.13",
+    "@storybook/manager-api": "^7.6.13",
     "@storybook/test-runner": "^0.9.2",
     "@storybook/theming": "^7.6.13",
     "@uqds/accordion": "^1.0.1-alpha.2",
