--- a/.github/workflows/reg.yml
+++ b/.github/workflows/reg.yml
@@ -1,15 +1,21 @@
-name: Visual Regression Testing
+name: Visual Regression Testing and preview environment
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'master'
+      - 'beta'
+  pull_request: {}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref || github.ref}}
 
       - name: Use Node 18
         uses: actions/setup-node@v3
@@ -20,11 +26,6 @@ jobs:
         run: |
           npm ci
           npx lerna bootstrap --no-ci
-
-      - name: Workaround for detached HEAD
-        # Workaround for Detached HEAD https://github.com/reg-viz/reg-suit#workaround-for-detached-head
-        run: |
-          git checkout ${GITHUB_REF#refs/heads/} || git checkout -b ${GITHUB_REF#refs/heads/} && git pull
 
       - name: Build Storybook
         run: |
@@ -47,3 +48,23 @@ jobs:
           UQDS_PERSONAL_ACCESS_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
         run: |
           npm run reg-suit run --update-screenshots
+
+      - name: Sync to preview environment
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks
+        env:
+          AWS_S3_BUCKET: uq-ds-regsuit
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SOURCE_DIR: 'packages/storybook-html/storybook-static'
+          DEST_DIR: storybook-preview/${{ github.run_id }}
+
+      - name: Add link to storybook preview in comments
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.UQDS_PERSONAL_ACCESS_TOKEN }}
+          header: preview
+          message: |
+            Storybook preview https://uq-ds-regsuit.s3.amazonaws.com/storybook-preview/${{ github.run_id }}/index.html
+
