--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "./packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@babel/eslint-parser": "^7.25.8",
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-env": "^7.26.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -38,12 +38,15 @@
     "@vitest/ui": "^2.1.3",
     "cli-progress": "^3.12.0",
     "core-js": "^3.38.1",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest-dom": "^5.4.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-testing-library": "^6.4.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.11.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^2.0.0",
@@ -51,21 +54,20 @@
     "gulp-uglify": "^3.0.2",
     "jsdom": "^25.0.1",
     "lerna": "^8.1.8",
-    "msw": "^2.4.11",
-    "prettier": "2.8.3",
+    "msw": "^2.5.2",
+    "prettier": "3.3.3",
     "puppeteer": "^23.6.0",
     "reg-keygen-git-hash-plugin": "^0.14.3",
     "reg-notify-github-with-api-plugin": "^0.14.4",
     "reg-publish-s3-plugin": "^0.14.4",
     "reg-suit": "^0.14.4",
-    "rollup": "^4.24.0",
-    "sass": "^1.80.2",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-scss": "^4.3.0",
+    "rollup": "^4.24.2",
+    "sass": "^1.80.4",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-scss": "^6.8.1",
+    "typescript-eslint": "^8.11.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "vitest": "^2.1.3",
