--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   "scripts": {
     "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx}\"",
     "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx}\" && npm run lint-js && npm run lint-css",
-    "lint-js": "eslint --ext .js,.jsx .",
+    "lint-js": "eslint",
     "lint-css": "stylelint \"**/*.{css,scss}\"",
     "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
     "test": "vitest run",
