--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/user-event": "^14.5.2",
-    "@vitest/ui": "^2.1.3",
+    "@vitest/ui": "^2.1.4",
     "cli-progress": "^3.12.0",
     "core-js": "^3.38.1",
-    "eslint": "^9.13.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest-dom": "^5.4.0",
@@ -64,13 +64,14 @@
     "rollup": "^4.24.2",
     "sass": "^1.80.4",
     "stylelint": "^16.10.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-scss": "^6.8.1",
-    "typescript-eslint": "^8.11.0",
+    "typescript-eslint": "^8.12.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
-    "vitest": "^2.1.3",
+    "vitest": "^2.1.4",
     "whatwg-fetch": "^3.6.20"
   },
   "scripts": {
